--- a/src/style.css
+++ b/src/style.css
@@ -4,3 +4,21 @@
   width: 100%;
   height: 100%;
 }
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #f3a913;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #febc36;
+  cursor: default;
+}
